--- a/ImageExIssue/Views/MainPage.xaml
+++ b/ImageExIssue/Views/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:controls="using:Template10.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uwpcontrols="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:vm="using:ImageExIssue.ViewModels"
     mc:Ignorable="d">
 
